turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:8: error: ')' expected but ';' found.
    droite((360/angles);
                       ^